fixed spacing

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -4,10 +4,6 @@
 }
 
 .cardImage {
-  overflow: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   transition: all 0.5s;
 }
 
