--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,7 +66,7 @@ COLORS:
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin-bottom: 4rem;
+  margin: 6.4rem 0;
   font-size: 3.6rem;
 }
 
@@ -80,7 +80,7 @@ COLORS:
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 12rem 0;
+  margin-bottom: 12rem;
   gap: 2rem;
 }
 
